# QuerySimulation

./: .gitignore  CMakeLists.txt  README.md  README.org
data/: edge.txt  floorplan.dxf  node.txt  rfid.txt  room.txt
data/jiao/: floorplan.dxf  floorplan.dxf~  node.txt  rfid2.txt
plot/: hitrate  hitrate.txt  plot.py
src/: CMakeLists.txt  back.tmp  defs.cpp  defs.h  issue  main.cpp  nearest_neighbor.cpp  nearest_neighbor.h  param.cpp  param.h  particle.cpp  particle.h  particlefilter.h  range_query.cpp  range_query.h  simsystem.cpp  simsystem.h  simulation.cpp  simulation.h  simulator.cpp  simulator.h  utils.cpp  utils.h  walkinggraph.cpp  walkinggraph.h
test/: CMakeLists.txt  test_simsystem.cpp  test_simulation.cpp
